Fix header cutting off on mobile

--- a/app/css/index.css
+++ b/app/css/index.css
@@ -2,8 +2,8 @@
 
 html,
 body {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   margin: 0px;
   padding: 0px;
 }
@@ -33,8 +33,8 @@ li {
 
 #app,
 .container {
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
 }
 .container {
   display: flex;
@@ -45,6 +45,7 @@ li {
   justify-content: space-between;
   background: #2980b9;
   padding: 1rem;
+  flex: 0 0 auto;
 }
 .logo {
   font-size: 3rem;
@@ -105,9 +106,6 @@ form input {
 }
 .forecast {
   flex: 1 1 auto;
-  display: flex;
-  flex-direction: column;
-  
 }
 .city {
   font-size: 4rem;
@@ -159,6 +157,7 @@ form input {
   color: #6dd5fa;
   text-align: center;
   margin-top: 4rem;
+  display: block;
 }
 
 
